--- a/geany.glade
+++ b/geany.glade
@@ -67,7 +67,7 @@
 			  <property name="use_underline">True</property>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3704">
+			    <widget class="GtkImage" id="image3768">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-new</property>
 			      <property name="icon_size">1</property>
@@ -144,7 +144,7 @@
 			  <signal name="activate" handler="on_save_all1_activate" last_modification_time="Thu, 02 Jun 2005 14:15:30 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3705">
+			    <widget class="GtkImage" id="image3769">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-save</property>
 			      <property name="icon_size">1</property>
@@ -165,7 +165,7 @@
 			  <signal name="activate" handler="on_toolbutton_reload_clicked" last_modification_time="Mon, 01 Sep 2008 16:57:06 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3706">
+			    <widget class="GtkImage" id="image3770">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-revert-to-saved</property>
 			      <property name="icon_size">1</property>
@@ -185,7 +185,7 @@
 			  <property name="use_underline">True</property>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3707">
+			    <widget class="GtkImage" id="image3771">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-revert-to-saved</property>
 			      <property name="icon_size">1</property>
@@ -272,7 +272,7 @@
 			  <signal name="activate" handler="on_close_other_documents1_activate" last_modification_time="Fri, 27 Jun 2008 15:19:28 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3708">
+			    <widget class="GtkImage" id="image3772">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-close</property>
 			      <property name="icon_size">1</property>
@@ -293,7 +293,7 @@
 			  <signal name="activate" handler="on_close_all1_activate" last_modification_time="Thu, 02 Jun 2005 14:15:30 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3709">
+			    <widget class="GtkImage" id="image3773">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-close</property>
 			      <property name="icon_size">1</property>
@@ -433,7 +433,7 @@
 				  <signal name="activate" handler="on_cut_current_line(s)1_activate" last_modification_time="Mon, 26 Oct 2009 17:34:30 GMT"/>
 
 				  <child internal-child="image">
-				    <widget class="GtkImage" id="image3710">
+				    <widget class="GtkImage" id="image3774">
 				      <property name="visible">True</property>
 				      <property name="stock">gtk-cut</property>
 				      <property name="icon_size">1</property>
@@ -454,7 +454,7 @@
 				  <signal name="activate" handler="on_copy_current_line(s)1_activate" last_modification_time="Mon, 26 Oct 2009 17:34:30 GMT"/>
 
 				  <child internal-child="image">
-				    <widget class="GtkImage" id="image3711">
+				    <widget class="GtkImage" id="image3775">
 				      <property name="visible">True</property>
 				      <property name="stock">gtk-copy</property>
 				      <property name="icon_size">1</property>
@@ -611,7 +611,7 @@
 				  <signal name="activate" handler="on_menu_increase_indent1_activate" last_modification_time="Tue, 01 Aug 2006 10:28:54 GMT"/>
 
 				  <child internal-child="image">
-				    <widget class="GtkImage" id="image3712">
+				    <widget class="GtkImage" id="image3776">
 				      <property name="visible">True</property>
 				      <property name="stock">gtk-indent</property>
 				      <property name="icon_size">1</property>
@@ -632,7 +632,7 @@
 				  <signal name="activate" handler="on_menu_decrease_indent1_activate" last_modification_time="Tue, 01 Aug 2006 10:28:54 GMT"/>
 
 				  <child internal-child="image">
-				    <widget class="GtkImage" id="image3713">
+				    <widget class="GtkImage" id="image3777">
 				      <property name="visible">True</property>
 				      <property name="stock">gtk-unindent</property>
 				      <property name="icon_size">1</property>
@@ -697,7 +697,7 @@
 			  <property name="use_underline">True</property>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3714">
+			    <widget class="GtkImage" id="image3778">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-add</property>
 			      <property name="icon_size">1</property>
@@ -721,15 +721,6 @@
 			      </child>
 
 			      <child>
-				<widget class="GtkMenuItem" id="insert_file_header1">
-				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">Insert File _Header</property>
-				  <property name="use_underline">True</property>
-				  <signal name="activate" handler="on_comments_fileheader_activate" last_modification_time="Mon, 03 Oct 2005 17:33:08 GMT"/>
-				</widget>
-			      </child>
-
-			      <child>
 				<widget class="GtkMenuItem" id="insert_function_description2">
 				  <property name="visible">True</property>
 				  <property name="label" translatable="yes">Insert _Function Description</property>
@@ -744,6 +735,21 @@
 				  <property name="label" translatable="yes">Insert _Multiline Comment</property>
 				  <property name="use_underline">True</property>
 				  <signal name="activate" handler="on_menu_comments_multiline_activate" last_modification_time="Sun, 17 Dec 2006 19:01:32 GMT"/>
+				</widget>
+			      </child>
+
+			      <child>
+				<widget class="GtkSeparatorMenuItem" id="separator58">
+				  <property name="visible">True</property>
+				</widget>
+			      </child>
+
+			      <child>
+				<widget class="GtkMenuItem" id="insert_file_header1">
+				  <property name="visible">True</property>
+				  <property name="label" translatable="yes">Insert File _Header</property>
+				  <property name="use_underline">True</property>
+				  <signal name="activate" handler="on_comments_fileheader_activate" last_modification_time="Mon, 03 Oct 2005 17:33:08 GMT"/>
 				</widget>
 			      </child>
 
@@ -776,7 +782,7 @@
 			  <property name="use_underline">True</property>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3715">
+			    <widget class="GtkImage" id="image3779">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-add</property>
 			      <property name="icon_size">1</property>
@@ -808,7 +814,7 @@
 			  <property name="use_underline">True</property>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3716">
+			    <widget class="GtkImage" id="image3780">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-add</property>
 			      <property name="icon_size">1</property>
@@ -847,7 +853,7 @@
 			  <signal name="activate" handler="on_preferences1_activate" last_modification_time="Wed, 08 Jun 2005 11:35:19 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3717">
+			    <widget class="GtkImage" id="image3781">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-preferences</property>
 			      <property name="icon_size">1</property>
@@ -868,7 +874,7 @@
 			  <signal name="activate" handler="on_plugin_preferences1_activate" last_modification_time="Wed, 28 Oct 2009 17:17:31 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3718">
+			    <widget class="GtkImage" id="image3782">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-preferences</property>
 			      <property name="icon_size">1</property>
@@ -936,7 +942,7 @@
 			  <signal name="activate" handler="on_find_in_files1_activate" last_modification_time="Thu, 06 Jul 2006 11:31:09 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3719">
+			    <widget class="GtkImage" id="image3783">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-find</property>
 			      <property name="icon_size">1</property>
@@ -957,7 +963,7 @@
 			  <signal name="activate" handler="on_replace1_activate" last_modification_time="Sun, 23 Oct 2005 13:22:36 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3720">
+			    <widget class="GtkImage" id="image3784">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-find-and-replace</property>
 			      <property name="icon_size">1</property>
@@ -984,7 +990,7 @@
 			  <signal name="activate" handler="on_next_message1_activate" last_modification_time="Tue, 05 Dec 2006 11:15:02 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3721">
+			    <widget class="GtkImage" id="image3785">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-go-down</property>
 			      <property name="icon_size">1</property>
@@ -1005,7 +1011,7 @@
 			  <signal name="activate" handler="on_previous_message1_activate" last_modification_time="Wed, 25 Jun 2008 12:10:04 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3722">
+			    <widget class="GtkImage" id="image3786">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-go-up</property>
 			      <property name="icon_size">1</property>
@@ -1056,7 +1062,7 @@
 			  <signal name="activate" handler="on_go_to_line_activate" last_modification_time="Sat, 06 Dec 2008 17:41:21 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3723">
+			    <widget class="GtkImage" id="image3787">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-jump-to</property>
 			      <property name="icon_size">1</property>
@@ -1169,7 +1175,7 @@
 			  <signal name="activate" handler="on_change_font1_activate" last_modification_time="Fri, 22 Apr 2005 18:58:45 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3724">
+			    <widget class="GtkImage" id="image3788">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-select-font</property>
 			      <property name="icon_size">1</property>
@@ -1741,7 +1747,7 @@
 			  <signal name="activate" handler="on_project_new1_activate" last_modification_time="Thu, 18 Jan 2007 22:16:24 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3725">
+			    <widget class="GtkImage" id="image3789">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-new</property>
 			      <property name="icon_size">1</property>
@@ -1762,7 +1768,7 @@
 			  <signal name="activate" handler="on_project_open1_activate" last_modification_time="Mon, 15 Jan 2007 17:34:17 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3726">
+			    <widget class="GtkImage" id="image3790">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-open</property>
 			      <property name="icon_size">1</property>
@@ -1791,7 +1797,7 @@
 			  <signal name="activate" handler="on_project_close1_activate" last_modification_time="Mon, 15 Jan 2007 17:34:17 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3727">
+			    <widget class="GtkImage" id="image3791">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-close</property>
 			      <property name="icon_size">1</property>
@@ -1848,7 +1854,7 @@
 			  <signal name="activate" handler="on_menu_reload_configuration1_activate" last_modification_time="Mon, 30 Jun 2008 16:19:40 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3728">
+			    <widget class="GtkImage" id="image3792">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-refresh</property>
 			      <property name="icon_size">1</property>
@@ -1868,7 +1874,7 @@
 			  <property name="use_underline">True</property>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3729">
+			    <widget class="GtkImage" id="image3793">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-file</property>
 			      <property name="icon_size">1</property>
@@ -1895,7 +1901,7 @@
 			  <signal name="activate" handler="on_show_color_chooser1_activate" last_modification_time="Wed, 22 Jun 2005 18:10:21 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3730">
+			    <widget class="GtkImage" id="image3794">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-select-color</property>
 			      <property name="icon_size">1</property>
@@ -1947,7 +1953,7 @@
 			  <signal name="activate" handler="on_help1_activate" last_modification_time="Sun, 24 Jul 2005 15:23:11 GMT"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3731">
+			    <widget class="GtkImage" id="image3795">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-help</property>
 			      <property name="icon_size">1</property>
@@ -2626,26 +2632,6 @@
 	<widget class="GtkMenu" id="insert1_menu">
 
 	  <child>
-	    <widget class="GtkImageMenuItem" id="comments">
-	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">I_nsert Comments</property>
-	      <property name="use_underline">True</property>
-
-	      <child internal-child="image">
-		<widget class="GtkImage" id="image3743">
-		  <property name="visible">True</property>
-		  <property name="stock">gtk-add</property>
-		  <property name="icon_size">1</property>
-		  <property name="xalign">0.5</property>
-		  <property name="yalign">0.5</property>
-		  <property name="xpad">0</property>
-		  <property name="ypad">0</property>
-		</widget>
-	      </child>
-	    </widget>
-	  </child>
-
-	  <child>
 	    <widget class="GtkMenuItem" id="add_changelog_entry2">
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">Insert _ChangeLog Entry</property>
@@ -2673,6 +2659,58 @@
 	  </child>
 
 	  <child>
+	    <widget class="GtkImageMenuItem" id="comments">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">_More</property>
+	      <property name="use_underline">True</property>
+
+	      <child internal-child="image">
+		<widget class="GtkImage" id="image3761">
+		  <property name="visible">True</property>
+		  <property name="stock">gtk-add</property>
+		  <property name="icon_size">1</property>
+		  <property name="xalign">0.5</property>
+		  <property name="yalign">0.5</property>
+		  <property name="xpad">0</property>
+		  <property name="ypad">0</property>
+		</widget>
+	      </child>
+
+	      <child>
+		<widget class="GtkMenu" id="comments_menu">
+
+		  <child>
+		    <widget class="GtkMenuItem" id="insert_file_header2">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Insert File _Header</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_comments_fileheader_activate" last_modification_time="Mon, 03 Oct 2005 17:33:08 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkMenuItem" id="insert_gpl_notice1">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Insert _GPL Notice</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_comments_gpl_activate" last_modification_time="Sun, 02 Oct 2005 17:37:31 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkMenuItem" id="insert_bsd_license_notice1">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Insert _BSD License Notice</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_comments_bsd_activate" last_modification_time="Fri, 05 Jan 2007 13:32:16 GMT"/>
+		    </widget>
+		  </child>
+		</widget>
+	      </child>
+	    </widget>
+	  </child>
+
+	  <child>
 	    <widget class="GtkSeparatorMenuItem" id="separator57">
 	      <property name="visible">True</property>
 	    </widget>
@@ -2685,7 +2723,7 @@
 	      <property name="use_underline">True</property>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image3744">
+		<widget class="GtkImage" id="image3762">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-add</property>
 		  <property name="icon_size">1</property>
@@ -2717,7 +2755,7 @@
 	      <property name="use_underline">True</property>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image3745">
+		<widget class="GtkImage" id="image3763">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-add</property>
 		  <property name="icon_size">1</property>
@@ -2783,7 +2821,7 @@
       <signal name="activate" handler="on_menu_open_selected_file1_activate" last_modification_time="Wed, 24 Jan 2007 18:48:44 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image3746">
+	<widget class="GtkImage" id="image3764">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-open</property>
 	  <property name="icon_size">1</property>
@@ -2804,7 +2842,7 @@
       <signal name="activate" handler="on_find_usage1_activate" last_modification_time="Fri, 27 May 2005 21:55:12 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image3747">
+	<widget class="GtkImage" id="image3765">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-find</property>
 	  <property name="icon_size">1</property>
@@ -2825,7 +2863,7 @@
       <signal name="activate" handler="on_find_document_usage1_activate" last_modification_time="Thu, 17 Jul 2008 13:42:25 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image3748">
+	<widget class="GtkImage" id="image3766">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-find</property>
 	  <property name="icon_size">1</property>
@@ -2846,7 +2884,7 @@
       <signal name="activate" handler="on_goto_tag_definition1" last_modification_time="Thu, 09 Sep 2010 11:30:52 GMT"/>
 
       <child internal-child="image">
-	<widget class="GtkImage" id="image3749">
+	<widget class="GtkImage" id="image3767">
 	  <property name="visible">True</property>
 	  <property name="stock">gtk-jump-to</property>
 	  <property name="icon_size">1</property>
